k8s/02-red-y-seguridad/dns-updaters.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duckdns-updater
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duckdns
  template:
    metadata:
      labels:
        app: duckdns
    spec:
      containers:
      - name: updater
        image: osixia/duckdns:latest
