k8s/02-red-y-seguridad/pgbouncer-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pgbouncer-ssl
  namespace: databases
spec:
  entryPoints:
    - postgres  # Debes asegurarte que Traefik tenga este puerto abierto
  routes:
  - match: HostSNI(`fheral-dev.duckdns.org`)
    services:
    - name: pgbouncer-external
      port: 6432
  tls:
    certResolver: letsencrypt-prod # El nombre del ClusterIssuer
    domains:
    - main: fheral-dev.duckdns.org
